@@ -111,6 +111,56 @@
 ** TeX requires {} 
 *** '}' without opening '{' before:  
 *** '}' without opening '{' before:  after 
+** Unknown command `@#' (left as is) 
+** TeX requires {} 
+** no image file for f-ile, (using f-ile.jpg) 
+*** no file argument for @image 
+*** no file argument for @image 
+** no image file for file@verb{:jk _" %@:}, (using file@verb{:jk _" %@:}.jpg) 
+** no image file for @file{f--ile}@@@., (using @file{f--ile}@@@..@file{file ext} e--xt@}) 
+*** '}' without opening '{' before:  
+*** '}' without opening '{' before:  after 
+*** '{' without macro. Before:  
+*** '{' without macro. Before:  and after 
+*** Undefined node `node' in @ref 
+*** Undefined node `' in @ref 
+*** Undefined node `' in @ref 
+*** Undefined node `node' in @ref 
+*** Undefined node `node' in @ref 
+*** Undefined node `node' in @ref 
+*** Undefined node `' in @ref 
+*** Need a node name for @inforef 
+*** Need a node name for @inforef 
+*** Need a node name for @inforef 
+** Unknown command `@#' (left as is) 
+** TeX requires {} 
+** no image file for f-ile, (using f-ile.jpg) 
+*** no file argument for @image 
+*** no file argument for @image 
+** no image file for file@verb{:jk _" %@:}, (using file@verb{:jk _" %@:}.jpg) 
+** no image file for @file{f--ile}@@@., (using @file{f--ile}@@@..@file{file ext} e--xt@}) 
+*** '}' without opening '{' before:  
+*** '}' without opening '{' before:  after 
+*** '{' without macro. Before:  
+*** '{' without macro. Before:  and after 
+*** Undefined node `node' in @ref 
+*** Undefined node `' in @ref 
+*** Undefined node `' in @ref 
+*** Undefined node `node' in @ref 
+*** Undefined node `node' in @ref 
+*** Undefined node `node' in @ref 
+*** Undefined node `' in @ref 
+*** Need a node name for @inforef 
+*** Need a node name for @inforef 
+*** Need a node name for @inforef 
+** Unknown command `@#' (left as is) 
+** TeX requires {} 
+*** '}' without opening '{' before:  
+*** '}' without opening '{' before:  after 
+** Unknown command `@#' (left as is) 
+** TeX requires {} 
+*** '}' without opening '{' before:  
+*** '}' without opening '{' before:  after 
 ** Unknown command `@#' (left as is) (l. 527 in mymacro)
 ** TeX requires {} (l. 527 in mymacro)
 ** no image file for f-ile, (using f-ile.jpg) 
